# prevcorp_agent

./: .gitignore  README.md  pyproject.toml  requirements.txt
evals/: eval_set.yaml  eval_set.yml  run_evals.py
evals/reports/: latest.json
src/: agent.py  app.py  chart_utils.py  config.py  duckdb_executor.py  few_shot_selector.py  logger.py  schema_loader.py
src/prompts/: few_shot_bank.yml  system_prompt.md
tests/: test_duckdb_executor.py  test_logger.py  test_schema_loader.py
