[project]
name = "prevcorp-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.97.0",
    "black==25.12.0",
    "duckdb>=1.5.2",
    "isort>=8.0.1",
    "pandas>=3.0.2",
    "pydantic>=2.13.3",
    "pylint>=4.0.5",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
]
